config-files/fwbuilder/centos-6-iptables.rules
# Generated by iptables-save v1.4.7 on Sat Jan 28 15:50:19 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 2049 -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m udp --dport 2049 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 111 -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m udp --dport 111 -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m udp --dport 33183 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 54990 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 38465:38467 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 24009:24019 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1024:10000 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp -j REJECT --reject-with tcp-reset 
-A INPUT -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -p tcp -m tcp -j REJECT --reject-with tcp-reset 
-A INPUT -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -m state --state NEW -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -m state --state NEW -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -m state --state NEW -j ACCEPT 
COMMIT
# Completed on Sat Jan 28 15:50:19 2012
